[gd_scene load_steps=119 format=3 uid="uid://b12sqey5g7b7a"]

[ext_resource type="Texture2D" uid="uid://d0jsn3ndnj7yl" path="res://assets/managaer talk animation/manager_talk-1.png" id="1_815j0"]
[ext_resource type="Script" path="res://scripts/assistant.gd" id="1_ltlxe"]
[ext_resource type="Texture2D" uid="uid://bdpwvtyp3upqn" path="res://assets/managaer talk animation/manager_talk-2.png" id="2_4crg5"]
[ext_resource type="Texture2D" uid="uid://cl2jheyjarjft" path="res://assets/ghost fly animation/ghost_fly-1.png" id="2_elvar"]
[ext_resource type="Texture2D" uid="uid://cumiui1enqdh1" path="res://assets/ghost fly animation/ghost_fly-2.png" id="3_owsu3"]
[ext_resource type="Texture2D" uid="uid://cvsmu06f8gtun" path="res://assets/managaer talk animation/manager_talk-3.png" id="3_tihda"]
[ext_resource type="Texture2D" uid="uid://3hicx0rrgjda" path="res://assets/managaer talk animation/manager_talk-4.png" id="4_2a8tf"]
[ext_resource type="Texture2D" uid="uid://bauhrbr1pgq04" path="res://assets/ghost fly animation/ghost_fly-3.png" id="4_kh6hr"]
[ext_resource type="Texture2D" uid="uid://wpwys4e2216l" path="res://assets/ghost fly animation/ghost_fly-4.png" id="5_crtu7"]
[ext_resource type="Texture2D" uid="uid://dna5v15u0y4wr" path="res://assets/managaer talk animation/manager_talk-5.png" id="5_qrepq"]
[ext_resource type="Texture2D" uid="uid://b2iw6veca6m8r" path="res://assets/managaer talk animation/manager_talk-6.png" id="6_e3be0"]
[ext_resource type="Texture2D" uid="uid://d3dm0ld2ach8b" path="res://assets/ghost fly animation/ghost_fly-5.png" id="6_qi431"]
[ext_resource type="Texture2D" uid="uid://d0y7dkpuw3kap" path="res://assets/ghost fly animation/ghost_fly-6.png" id="7_aqpc6"]
[ext_resource type="Texture2D" uid="uid://cp7gw7bakgjrp" path="res://assets/managaer talk animation/manager_talk-7.png" id="7_qjoly"]
[ext_resource type="Texture2D" uid="uid://n88kmgjsc7h7" path="res://assets/managaer talk animation/manager_talk-8.png" id="8_bqmfp"]
[ext_resource type="Texture2D" uid="uid://cnqj35w5dy36f" path="res://assets/ghost fly animation/ghost_fly-7.png" id="8_hhmgr"]
[ext_resource type="Texture2D" uid="uid://b588y4uflg211" path="res://assets/ghost fly animation/ghost_fly-8.png" id="9_emeil"]
[ext_resource type="Texture2D" uid="uid://f3vaq3sxv7uh" path="res://assets/managaer talk animation/manager_talk-9.png" id="9_ovntt"]
[ext_resource type="Texture2D" uid="uid://bqevoo8uq6217" path="res://assets/speech_bubble_yellow.png" id="10_1i6ek"]
[ext_resource type="Texture2D" uid="uid://cduebc0kg30uq" path="res://assets/ghost fly animation/ghost_fly-9.png" id="10_424aw"]
[ext_resource type="Texture2D" uid="uid://d2e6hrnhbktj4" path="res://assets/ghost fly animation/ghost_fly-10.png" id="11_e0nof"]
[ext_resource type="Texture2D" uid="uid://dgc137pl3ap0e" path="res://assets/ghost fly animation/ghost_fly-11.png" id="12_ea2dk"]
[ext_resource type="Texture2D" uid="uid://7r0hf3tjeogv" path="res://assets/ghost fly animation/ghost_fly-12.png" id="13_0r04i"]
[ext_resource type="Texture2D" uid="uid://c52t7yl00gnxy" path="res://assets/ghost fly animation/ghost_fly-13.png" id="14_8nstr"]
[ext_resource type="Texture2D" uid="uid://8a2tdhx5uk54" path="res://assets/ghost fly animation/ghost_fly-14.png" id="15_o6lwc"]
[ext_resource type="Texture2D" uid="uid://ipdhbv8oi74w" path="res://assets/ghost fly animation/ghost_fly-15.png" id="16_gdy0a"]
[ext_resource type="Texture2D" uid="uid://du4e2kdtsg58v" path="res://assets/ghost fly animation/ghost_fly-16.png" id="17_0die7"]
[ext_resource type="Texture2D" uid="uid://bq0d7mqkq1xr6" path="res://assets/ghost fly animation/ghost_fly-17.png" id="18_rggyx"]
[ext_resource type="Texture2D" uid="uid://dge1juiipibrp" path="res://assets/ghost fly animation/ghost_fly-18.png" id="19_4m5xq"]
[ext_resource type="Texture2D" uid="uid://ceyc7lvas1cga" path="res://assets/ghost fly animation/ghost_fly-19.png" id="20_atodi"]
[ext_resource type="Texture2D" uid="uid://cl3uss6btogr2" path="res://assets/ghost fly animation/ghost_fly-20.png" id="21_2kr8r"]
[ext_resource type="Texture2D" uid="uid://do8ipa1pk47ru" path="res://assets/ghost fly animation/ghost_fly-21.png" id="22_r5kla"]
[ext_resource type="Texture2D" uid="uid://yaytxh2mfdk7" path="res://assets/ghost fly animation/ghost_fly-22.png" id="23_3clrx"]
[ext_resource type="Texture2D" uid="uid://r2wx5y3wm2gx" path="res://assets/ghost fly animation/ghost_fly-23.png" id="24_7tbns"]
[ext_resource type="Texture2D" uid="uid://dboteavax1j33" path="res://assets/ghost fly animation/ghost_fly-24.png" id="25_rntfh"]
[ext_resource type="Texture2D" uid="uid://wel3oyqmdvde" path="res://assets/ghost fly animation/ghost_fly-25.png" id="26_34ms1"]
[ext_resource type="Texture2D" uid="uid://i6fervkxqt1i" path="res://assets/ghost fly animation/ghost_fly-26.png" id="27_ho4ug"]
[ext_resource type="Texture2D" uid="uid://dyvaucp4aoqk8" path="res://assets/ghost fly animation/ghost_fly-27.png" id="28_qvpx1"]
[ext_resource type="Texture2D" uid="uid://1bq8rib31rdr" path="res://assets/ghost fly animation/ghost_fly-28.png" id="29_nd3h7"]
[ext_resource type="Texture2D" uid="uid://ct7qvb561d5ub" path="res://assets/ghost fly animation/ghost_fly-29.png" id="30_cvksy"]
[ext_resource type="Texture2D" uid="uid://e8ysah65yqrn" path="res://assets/ghost fly animation/ghost_fly-30.png" id="31_tgk1x"]
[ext_resource type="Texture2D" uid="uid://d1rxv5ethqoy5" path="res://assets/ghost fly animation/ghost_fly-31.png" id="32_mftg2"]
[ext_resource type="Texture2D" uid="uid://0mol0jhj3dif" path="res://assets/ghost fly animation/ghost_fly-32.png" id="33_voipr"]
[ext_resource type="Texture2D" uid="uid://2mlukwj6ltnp" path="res://assets/ghost fly animation/ghost_fly-33.png" id="34_0gbo5"]
[ext_resource type="Texture2D" uid="uid://28xnfr86agcx" path="res://assets/ghost fly animation/ghost_fly-34.png" id="35_akan5"]
[ext_resource type="Texture2D" uid="uid://bt7b3iwppoqtl" path="res://assets/ghost fly animation/ghost_fly-35.png" id="36_y0mm0"]
[ext_resource type="Texture2D" uid="uid://c2l440vewaa62" path="res://assets/ghost fly animation/ghost_fly-36.png" id="37_mkdym"]
[ext_resource type="Texture2D" uid="uid://dnw1o1ybtgksu" path="res://assets/ghost fly animation/ghost_fly-37.png" id="38_jhixe"]
[ext_resource type="Texture2D" uid="uid://vjqjt8tnhk6u" path="res://assets/ghost fly animation/ghost_fly-38.png" id="39_5gd3x"]
[ext_resource type="Texture2D" uid="uid://divwfvvc824m3" path="res://assets/ghost fly animation/ghost_fly-39.png" id="40_e52ui"]
[ext_resource type="Texture2D" uid="uid://c6wsngbkkg2f1" path="res://assets/ghost fly animation/ghost_fly-40.png" id="41_33ndh"]
[ext_resource type="Texture2D" uid="uid://krxt1bb3bele" path="res://assets/ghost fly animation/ghost_fly-41.png" id="42_047ku"]
[ext_resource type="Texture2D" uid="uid://bhjofdwgfqotj" path="res://assets/ghost fly animation/ghost_fly-42.png" id="43_lsdwb"]
[ext_resource type="Texture2D" uid="uid://wp5srb72eee5" path="res://assets/ghost fly animation/ghost_fly-43.png" id="44_8nu1q"]
[ext_resource type="Texture2D" uid="uid://7agf0r3qwm" path="res://assets/ghost fly animation/ghost_fly-44.png" id="45_hdljb"]
[ext_resource type="Texture2D" uid="uid://i8i134duq1w7" path="res://assets/ghost fly animation/ghost_fly-45.png" id="46_o6sy4"]
[ext_resource type="Texture2D" uid="uid://cxj0m7dxh12w3" path="res://assets/ghost fly animation/ghost_fly-46.png" id="47_xcp73"]
[ext_resource type="Texture2D" uid="uid://lh68fh1vbuyx" path="res://assets/ghost fly animation/ghost_fly-47.png" id="48_vam5e"]
[ext_resource type="Texture2D" uid="uid://dmtesurma5fcd" path="res://assets/ghost fly animation/ghost_fly-48.png" id="49_uvk7e"]
[ext_resource type="Texture2D" uid="uid://btojpfmvu0rxh" path="res://assets/memo blocks/memo_card_select.png" id="60_c6bho"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hqqhr"]
atlas = ExtResource("2_elvar")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_p84p4"]
atlas = ExtResource("3_owsu3")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf4gs"]
atlas = ExtResource("4_kh6hr")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdkf7"]
atlas = ExtResource("5_crtu7")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nfhh"]
atlas = ExtResource("6_qi431")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lp82"]
atlas = ExtResource("7_aqpc6")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdas8"]
atlas = ExtResource("8_hhmgr")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfy0o"]
atlas = ExtResource("9_emeil")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_jekrl"]
atlas = ExtResource("10_424aw")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_we0eh"]
atlas = ExtResource("11_e0nof")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ofv7"]
atlas = ExtResource("12_ea2dk")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_nndip"]
atlas = ExtResource("13_0r04i")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxt77"]
atlas = ExtResource("14_8nstr")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_vank0"]
atlas = ExtResource("15_o6lwc")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_5x2ev"]
atlas = ExtResource("16_gdy0a")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_kngaf"]
atlas = ExtResource("17_0die7")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wdnb"]
atlas = ExtResource("18_rggyx")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3yto"]
atlas = ExtResource("19_4m5xq")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hcgr"]
atlas = ExtResource("20_atodi")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvqth"]
atlas = ExtResource("21_2kr8r")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3nrv"]
atlas = ExtResource("22_r5kla")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgtvc"]
atlas = ExtResource("23_3clrx")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_bllby"]
atlas = ExtResource("24_7tbns")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5be0"]
atlas = ExtResource("25_rntfh")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_moflo"]
atlas = ExtResource("26_34ms1")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq1lc"]
atlas = ExtResource("27_ho4ug")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry06w"]
atlas = ExtResource("28_qvpx1")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbfmc"]
atlas = ExtResource("29_nd3h7")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_02o1d"]
atlas = ExtResource("30_cvksy")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq44o"]
atlas = ExtResource("31_tgk1x")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_cx6e3"]
atlas = ExtResource("32_mftg2")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_m22a0"]
atlas = ExtResource("33_voipr")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_16jsk"]
atlas = ExtResource("34_0gbo5")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_52tln"]
atlas = ExtResource("35_akan5")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxf8t"]
atlas = ExtResource("36_y0mm0")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkvnl"]
atlas = ExtResource("37_mkdym")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqut0"]
atlas = ExtResource("38_jhixe")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyvhf"]
atlas = ExtResource("39_5gd3x")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_arpt5"]
atlas = ExtResource("40_e52ui")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwjig"]
atlas = ExtResource("41_33ndh")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_44ehy"]
atlas = ExtResource("42_047ku")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3m2q"]
atlas = ExtResource("43_lsdwb")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdrc5"]
atlas = ExtResource("44_8nu1q")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_gogd3"]
atlas = ExtResource("45_hdljb")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_je3ju"]
atlas = ExtResource("46_o6sy4")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_ln1vu"]
atlas = ExtResource("47_xcp73")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vio0"]
atlas = ExtResource("48_vam5e")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_x42x0"]
atlas = ExtResource("49_uvk7e")
region = Rect2(0, 0, 700, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyi3j"]
atlas = ExtResource("1_815j0")
region = Rect2(0, 0, 1640, 2360)

[sub_resource type="AtlasTexture" id="AtlasTexture_80bj6"]
atlas = ExtResource("2_4crg5")
region = Rect2(0, 0, 1640, 2360)

[sub_resource type="AtlasTexture" id="AtlasTexture_5adaj"]
atlas = ExtResource("3_tihda")
region = Rect2(0, 0, 1640, 2360)

[sub_resource type="AtlasTexture" id="AtlasTexture_rl8rn"]
atlas = ExtResource("4_2a8tf")
region = Rect2(0, 0, 1640, 2360)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcv0f"]
atlas = ExtResource("5_qrepq")
region = Rect2(0, 0, 1640, 2360)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxpjm"]
atlas = ExtResource("6_e3be0")
region = Rect2(0, 0, 1640, 2360)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rlag"]
atlas = ExtResource("7_qjoly")
region = Rect2(0, 0, 1640, 2360)

[sub_resource type="AtlasTexture" id="AtlasTexture_pc0pv"]
atlas = ExtResource("8_bqmfp")
region = Rect2(0, 0, 1640, 2360)

[sub_resource type="AtlasTexture" id="AtlasTexture_klfpk"]
atlas = ExtResource("9_ovntt")
region = Rect2(0, 0, 1640, 2360)

[sub_resource type="SpriteFrames" id="SpriteFrames_35vf8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqqhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p84p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf4gs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdkf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nfhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lp82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdas8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfy0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jekrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we0eh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ofv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nndip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxt77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vank0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x2ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kngaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wdnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3yto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hcgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvqth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3nrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgtvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bllby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5be0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_moflo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq1lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry06w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbfmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02o1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq44o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cx6e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m22a0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16jsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52tln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxf8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkvnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqut0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyvhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arpt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwjig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44ehy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3m2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdrc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gogd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je3ju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln1vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vio0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x42x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkvnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqut0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyvhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arpt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwjig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44ehy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3m2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdrc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gogd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je3ju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln1vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vio0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x42x0")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyi3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80bj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5adaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl8rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcv0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxpjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rlag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc0pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klfpk")
}],
"loop": true,
"name": &"talk",
"speed": 8.0
}]

[node name="Assistant" type="Node2D"]
script = ExtResource("1_ltlxe")

[node name="AssistantSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(431, 558)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_35vf8")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.366768

[node name="AssistantButton" type="Button" parent="AssistantSprite"]
modulate = Color(1, 1, 1, 0)
offset_left = -361.0
offset_top = -810.0
offset_right = 438.0
offset_bottom = 862.0

[node name="HintBubble" type="Sprite2D" parent="."]
visible = false
position = Vector2(-863, -804)
scale = Vector2(1.5, 1.5)
texture = ExtResource("10_1i6ek")

[node name="Label" type="Label" parent="HintBubble"]
visible = false
offset_left = -398.667
offset_top = -95.3333
offset_right = -162.667
offset_bottom = 69.6667
theme_override_colors/font_color = Color(0.266667, 0.215686, 0.0470588, 1)
theme_override_font_sizes/font_size = 120
text = "lie 1"

[node name="Label2" type="Label" parent="HintBubble"]
visible = false
offset_left = -398.667
offset_top = -95.3333
offset_right = -162.667
offset_bottom = 69.6667
theme_override_colors/font_color = Color(0.266667, 0.215686, 0.0470588, 1)
theme_override_font_sizes/font_size = 120
text = "lie 2"

[node name="Label3" type="Label" parent="HintBubble"]
visible = false
offset_left = -398.667
offset_top = -95.3333
offset_right = -162.667
offset_bottom = 69.6667
theme_override_colors/font_color = Color(0.266667, 0.215686, 0.0470588, 1)
theme_override_font_sizes/font_size = 120
text = "lie 3"

[node name="Label4" type="Label" parent="HintBubble"]
visible = false
offset_left = -398.667
offset_top = -95.3333
offset_right = -162.667
offset_bottom = 69.6667
theme_override_colors/font_color = Color(0.266667, 0.215686, 0.0470588, 1)
theme_override_font_sizes/font_size = 120
text = "lie 4"

[node name="LIE" type="Label" parent="HintBubble"]
offset_left = -588.0
offset_top = -209.0
offset_right = 92.0
offset_bottom = 221.0
theme_override_colors/font_color = Color(0.266667, 0.215686, 0.0313726, 1)
theme_override_font_sizes/font_size = 120
text = "..."
autowrap_mode = 2

[node name="QuestionsLeftLabel" type="Label" parent="."]
offset_left = -246.0
offset_top = -1202.0
offset_right = 909.0
offset_bottom = -997.0
theme_override_colors/font_color = Color(0.262745, 0.215686, 0.0392157, 1)
theme_override_font_sizes/font_size = 150
text = "questions left: 4"

[node name="Frame" type="Sprite2D" parent="."]
position = Vector2(452, 489)
scale = Vector2(1.3, 1.3)
texture = ExtResource("60_c6bho")
